--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,5 +1,5 @@
 .container {
-  background: url("src/assets/banners/bannerHome.png") no-repeat center;
+  background: url("../../assets/banners/bannerHome.png") no-repeat center;
   background-size: cover;
   display: flex;
   justify-content: center;
