Adicionei o bannerMobile, e coloquei código css para posicionar essas imagens

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,5 +1,5 @@
 .container {
-  background: url("../../assets/banners/bannerHome.png") no-repeat center;
+  background: url("../../assets/banners/bannerHome.png") no-repeat center 70%;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -53,7 +53,10 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    background-position: 55%;;
+    background: url("../../assets/banners/bannerMobile.png") no-repeat;
+    background-size: cover;
+    background-position-y:60%;
+    background-attachment: fixed;
   }
 
   .menuActive {
